wp-content/themes/tcs-responsive/css/challenge-results.css
/* ... */
            #winner .winnerRow .details div span{
                font-size: 14px;
                line-height: 22px;
                display: block;
                text-align: left;
                padding: 0;
                margin: 0;
            }
            #winner .winnerRow .details div span span.break{
                display: inline;
            }
            #winner .winnerRow .details div span.title,
            #winner .winnerRow .details div span.time{
                color: #666;
            }
            #winner .winnerRow .details div span.title{
                padding-bottom: 20px;
                text-transform: uppercase;
            }
            #winner .winnerRow .details div span.date{
                color: #999;
            }

    #winner .winnerRow .actions{
        padding: 98px 0 0 60px;
        width: 100px;
    }
    .TC #winner .winnerRow .actions{
        padding: 98px 0 0;
        width: 105px;
    }
    .view-challenge-result.develop #winner .winnerRow .actions,
    .TC .develop #winner .winnerRow .actions{
        width: 115px;
        padding: 40px 0 0 0;
    }
        #winner .winnerRow .actions a{
            background: url("../i/winner-actions.png") no-repeat;
            height: 23px;
            padding-left: 33px;
            line-height: 23px;
            font-size: 16px;
            display: block;
            text-align: left;
            margin-bottom: 18px;
        }
        #winner .winnerRow .actions a:hover{
            opacity: .6;
            color: #FF8A00;
        }
        #winner .winnerRow .actions a.view{
            background-position: 0 0;
        }
        #winner .winnerRow .actions a.download{
            background-position: 0 -100px;
        }

        /*showMore*/
        .showMore{
            border-bottom: 1px solid #e7e7e7;
            text-align: center;
            padding: 20px 0;
        }
            .showMore a{
                display: inline-block;
                font-size: 20px;
                padding-bottom: 20px;
                line-height: 20px;
                background: url("../i/arrows-ud.png") no-repeat 50% 28px;
            }

#winner .competitionDetails{
    padding: 20px 0 30px;
    border-bottom: 1px solid #e7e7e7;
    margin-left: auto;
    margin-right: auto;
}
    #winner .competitionDetails > div{
        float: left;
        display: block;
        text-align: center;
        border-left: 1px solid #e7e7e7;
        height: 110px;
        font-size: 0;
    }
    #winner .competitionDetails > div.hide{
      display: none;  
    }
    #winner .competitionDetails > div:first-child{
        border-left: none;
    }
    #winner .competitionDetails > div.clear{
        float: none;
        height: 0;
        border-left: none;
    }
        #winner .competitionDetails > div h2{
            font-family: 'Source Sans Pro', lato, Arial, Helvetica, sans-serif;
            font-size: 14px;
            color: #00aeff;
            text-transform: uppercase;
            line-height: 26px;
            margin: 0;
        }
        .develop #winner .competitionDetails > div h2{
            color: #228400;
        }
        #winner .competitionDetails > div div.values{
            display: inline-block;
            padding: 15px 20px 0;
            height: 67px;
        }
        .TC #winner .competitionDetails > div div.values{
            padding: 15px 10px 0;
        }
        .develop #winner .competitionDetails > div.average div.values{
            padding: 15px 10px 0;
        }
        .TC .develop #winner .competitionDetails > div div.values{
            padding: 15px 2px 0;
        }
            #winner .competitionDetails > div div.values span.count{
                font-size: 30px;
                color: #333;
                display: block;
                line-height: 24px;
            }
                #winner .competitionDetails > div div.values span.count .sup{
                    font-size: 12px;
                    position: relative;
                    top: -10px;
                    color: #666;
                }
            #winner .competitionDetails > div div.values span.type{
                font-size: 11px;
                color: #666;
                display: block;
            }
    /*Bugfix refactored-challenge-details-80: fixed inconsistent spacing in results between design and develop*/
    #winner .competitionDetails div.registrant,
    .develop #winner .competitionDetails div.registrant{
        width: 150px;
    }
    .TC #winner .competitionDetails div.registrant{
        width: 100px;
    }
    .TC .develop #winner .competitionDetails div.registrant{
        width: 90px;
    }
    /*Bugfix refactored-challenge-details-80: fixed inconsistent spacing in results between design and develop*/
    #winner .competitionDetails div.round,
    .develop #winner .competitionDetails div.round,
    .develop #winner .competitionDetails div.average{
        width: 415px;
    }
    .TC #winner .competitionDetails div.round{
        width: 300px;
    }
    .TC .develop #winner .competitionDetails div.round{
        width: 230px;
    }
    .TC .develop #winner .competitionDetails div.average{
        width: 155px;
    }
    #winner div.note{
        font-size: 12px;
        color: #999;
        text-align: center;
        text-transform: uppercase;
        padding: 20px 0;
    }
    .view-challenge-result.challenge-detail .topRightTitle{
        position: absolute;
        right: 0;
        top: 0;
        width: auto;
    }
    /*registrantsTable*/
table.registrantsTable{
    width: 100%;
    display: table;
}
    table.registrantsTable th{
        height: 42px;
        vertical-align: middle;
        background: #f1f1f1;
        border-bottom: 1px solid #E7E7E7;
    }
    table.registrantsTable th.leftAlign{
        text-align: left;
        padding-left: 20px;
    }
    .TC table.registrantsTable th.leftAlign{
        padding-left: 10px;
    }
/* ... */

